# Rust-Microservice

./: Cargo.toml  Makefile.toml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/infra/: Cargo.toml
crates/infra/src/: lib.rs
crates/iv_api/: Cargo.toml
crates/iv_api/src/: lib.rs
crates/iv_api/src/user/: mod.rs
crates/iv_app/: Cargo.toml
crates/iv_app/src/: main.rs
crates/iv_core/: Cargo.toml
crates/iv_core/src/: configs.rs  errors.rs
crates/iv_domain/: Cargo.toml
crates/iv_domain/src/user/: mod.rs  request.rs  response.rs
crates/iv_infra/: Cargo.toml
crates/iv_infra/migrations/: 0000_initial.sql
crates/iv_infra/src/: lib.rs
crates/iv_infra/src/middleware/: map_response.rs  mod.rs  mw_auth.rs
crates/iv_infra/src/user/: mod.rs
crates/iv_utils/: Cargo.toml
src/: configs.rs  dbs.rs  errors.rs  main.rs
