[package]
name = "iv_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = "1.0.219"
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }


iv_core = {path = "../iv_core"}
iv_infra = {path = "../iv_infra"}
iv_domain = {path = "../iv_domain"}