[package]
name = "iv_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
serde = "1.0.204"
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }


iv_core = {path = "../iv_core"}
iv_infra = {path = "../iv_infra"}
iv_domain = {path = "../iv_domain"}