[package]
name = "iv_app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.5", features = ["tracing"] }
dotenv = "0.15.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }

tracing-appender = "0.2.3"
chrono = "0.4.38"


iv_core = {path = "../iv_core"}
iv_infra = {path = "../iv_infra"}
iv_api = {path = "../iv_api"}