[package]
name = "iv_infra"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }
tracing = "0.1.40"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
sea-query = "0.30.7"
modql = { version = "0.3.10", features = ["with-sea-query"] }
sea-query-binder = { version = "0.5.0", features = ["sqlx-postgres"] }
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
serde_with = "3.9.0"

#member
iv_core = {path = "../iv_core"}
iv_domain = {path = "../iv_domain"}


